--- a/recipes/templates/recipes/review.html
+++ b/recipes/templates/recipes/review.html
@@ -8,7 +8,10 @@
     <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <h3 class="text-lg font-semibold mb-4">Selected Ingredients:</h3>
         <ul class="list-disc list-inside">
-            {% for ingredient in ingredients %}
+            {% for ingredient in db_ingredients %}
+                <li>{{ ingredient.name }} - {{ ingredient.quantity }} {{ ingredient.unit }}</li>
+            {% endfor %}
+            {% for ingredient in temp_ingredients %}
                 <li>{{ ingredient.name }} - {{ ingredient.quantity }} {{ ingredient.unit }}</li>
             {% endfor %}
         </ul>
