--- a/recipes/templates/recipes/my_items.html
+++ b/recipes/templates/recipes/my_items.html
@@ -44,8 +44,14 @@
         {% if ingredients %}
             <ul class="divide-y divide-gray-200">
                 {% for ingredient in ingredients %}
-                    <li class="py-4">
+                    <li class="py-4 flex justify-between items-center">
                         {{ ingredient.name }} - {{ ingredient.quantity }} {{ ingredient.unit }}
+                        <form method="POST" action="{% url 'delete_ingredient' ingredient.id %}" style="display: inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="text-red-500 hover:text-red-700">
+                                Delete
+                            </button>
+                        </form>
                     </li>
                 {% endfor %}
             </ul>
@@ -53,5 +59,15 @@
             <p class="text-gray-600">No ingredients added yet.</p>
         {% endif %}
     </div>
+
 </div>
+{% if messages %}
+    <div class="max-w-2xl mx-auto">
+        {% for message in messages %}
+            <div class="bg-green-500 text-white p-2 rounded mb-2">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
 {% endblock %}
