--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -34,6 +34,16 @@
         </div>
     </nav>
 
+    {% if messages %}
+        <div class="container mx-auto px-4 py-4">
+            <ul class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative">
+                {% for message in messages %}
+                    <li class="py-1">{{ message }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
+
     <div class="container mx-auto px-4 py-8">
         {% block content %}
         {% endblock %}
