Rename to Meal Mate

--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Generator</title>
+    <title>Meal Mate</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
@@ -13,7 +13,7 @@
                 <div class="flex space-x-7">
                     <div>
                         <a href="{% url 'home' %}" class="flex items-center py-4">
-                            <span class="font-semibold text-gray-500 text-lg">Recipe Generator</span>
+                            <span class="font-semibold text-gray-500 text-lg">Meal Mate</span>
                         </a>
                     </div>
                     <div class="hidden md:flex items-center space-x-1">
