--- a/recipes/templates/recipes/recipe_result.html
+++ b/recipes/templates/recipes/recipe_result.html
@@ -10,7 +10,7 @@
 
         <h4 class="mt-4 text-lg font-semibold">Ingredients:</h4>
         <ul class="list-disc list-inside pl-5">
-            {% for ingredient in recipe.ingredients.all %}
+            {% for ingredient in recipe.recipe_ingredients.all %}
                 <li>{{ ingredient.quantity }} {{ ingredient.unit }} of {{ ingredient.name }}</li>
             {% endfor %}
         </ul>
