--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Mate</title>
+    {% load static %}
+    <link rel="icon" href="{% static 'recipes/favicon.ico' %}" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
