--- a/recipes/templates/recipes/recipe_result.html
+++ b/recipes/templates/recipes/recipe_result.html
@@ -23,6 +23,7 @@
         <div class="mt-4">
             <p><strong>Diet Type:</strong> {{ recipe.diet_type }}</p>
             <p><strong>Servings:</strong> {{ recipe.servings }}</p>
+            <p><strong>Cook Time:</strong> {{ recipe.cook_time }}</p>
         </div>
 
         <a href="{% url 'home' %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mt-4 inline-block">
