Added ability to look at specific recipe

--- a/recipes/templates/recipes/recipe_result.html
+++ b/recipes/templates/recipes/recipe_result.html
@@ -1,4 +1,3 @@
-<!-- templates/recipes/recipe_result.html -->
 {% extends 'recipes/base.html' %}
 
 {% block content %}
@@ -49,6 +48,9 @@
 
         <a href="{% url 'home' %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mt-4 inline-block">
             Back to Home
+        </a>
+        <a href="{% url 'recipe_detail' recipe.id %}" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mt-4 inline-block">
+            View Full Recipe
         </a>
     </div>
 </div>
