--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -23,6 +23,7 @@
                         <a href="{% url 'home' %}" class="py-4 px-2 text-gray-500 hover:text-green-500 transition duration-300">Home</a>
                         <a href="{% url 'my_items' %}" class="py-4 px-2 text-gray-500 hover:text-green-500 transition duration-300">My Items</a>
                         <a href="{% url 'generate_recipe' %}" class="py-4 px-2 text-gray-500 hover:text-green-500 transition duration-300">Generate Recipe</a>
+                        <a href="{% url 'my_recipes' %}" class="py-4 px-2 text-gray-500 hover:text-green-500 transition duration-300">My Recipes</a>
                     </div>
                 </div>
                 <div class="hidden md:flex items-center space-x-3">
