--- a/recipes/templates/recipes/my_recipes.html
+++ b/recipes/templates/recipes/my_recipes.html
@@ -14,9 +14,20 @@
                             <a href="{% url 'recipe_detail' recipe.id %}" class="hover:underline">{{ recipe.title }}</a>
                         </h2>
                         <p class="text-gray-600 mt-2">Cook time: {{ recipe.cook_time }}</p>
-                        <a href="{% url 'recipe_detail' recipe.id %}" class="inline-block mt-4 px-4 py-2 bg-blue-500 text-white text-sm font-medium rounded hover:bg-blue-600">
-                            View Recipe
-                        </a>
+
+                        <div class="flex justify-between items-center mt-4">
+                            <a href="{% url 'recipe_detail' recipe.id %}" class="inline-block px-4 py-2 bg-blue-500 text-white text-sm font-medium rounded hover:bg-blue-600">
+                                View Recipe
+                            </a>
+
+                            <!-- Delete Recipe Form -->
+                            <form action="{% url 'delete_recipe' recipe.id %}" method="POST" onsubmit="return confirm('Are you sure you want to delete this recipe?');">
+                                {% csrf_token %}
+                                <button type="submit" class="inline-block px-4 py-2 bg-red-500 text-white text-sm font-medium rounded hover:bg-red-600">
+                                    Delete
+                                </button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             {% endfor %}
